# omen

./: Dockerfile  Makefile.am  aclocal.m4  configure.ac
.github/workflows/: run-cicd.yml
src/conf/generic/: build_config.h  build_config.h.in
src/include/omen/managers/boot/bootloaders/limine/: limine.h
